2015-01-05  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_CONFIG_FILES): add texindex/Makefile.
	* Makefile.am (SUBDIRS): add texindex.
	(po-check): also look at *.twjr.
	* util/Makefile.am (bin_PROGRAMS): remove, we'll no longer build
	the C texindex.

	* texindex/ti.twjr: --help formatting.
	
2015-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (point_forward_char, point_backward_char): 
	Correctly traverse multi-column characters.  (Bug was likely 
	introduced on 2014-10-09 with change to window_point_to_column.)

2015-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text, calculate_line_starts): 
	process_node_text inlined in calculate_line_starts.

	(calculate_line_starts): Simplify.
	(collect_line_starts): Unused arguments removed.  Return value 
	is void.

2015-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Indirect Table): Value in 
	indirect table is for first node in file, not start of file 
	itself.

2015-01-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Output Formats, Generating HTML): be rather
	forceful in our overall goal for the HTML output (namely, be
	widely usable rather than fancy).

	* info/info-utils.c,
	* info/nodes.c,
	* info/nodes.h: 2015.
	
	* Pod-Simple-Texinfo/pod2texi.pl,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi,
	* info/info.c,
	* install-info/install-info.c,
	* texindex/ti.twjr,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/regenerate_docstr.sh,
	* tp/maintain/regenerate_file_lists.pl,
	* tp/maintain/template.pod,
	* tp/texi2any.pl,
	* util/texi-elements-by-size,
	* util/texi2dvi,
	* util/texindex.c: 2015.	

2015-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (TAG): Add 'nodestart_adjusted' field and remove 
	'orig_nodestart'.
	(NODE): Remove 'nodestart' field.
	* info/nodes.c (info_create_tag): Update.

	* info/nodes.c (adjust_nodestart): Set offset of found node in 
	'nodestart_adjusted' field of NODE.